--- a/src/styles/AskQuestions.module.css
+++ b/src/styles/AskQuestions.module.css
@@ -47,6 +47,7 @@
 .box3{
     display: flex;
     padding: 0.1% 10%;
+    
 }
 .ask{
     margin-right: 5%;
@@ -67,9 +68,11 @@
 .contentBox1{
     width: 90%;
     margin-right: 1%;
+    
 }
 .heading2{
     font-size: 30px;
+    font-weight: 600;
     margin-top: 2%;
 }
 .subBox1{
@@ -79,10 +82,12 @@
     width: 100%;
     border: 2px solid #DAE0E6;
     margin-top: 1%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.12); 
     
 }
 .subBox1A{
     width: 40%;
+    
 }
 .text1B{
     margin-left: 11%;
@@ -131,8 +136,19 @@
     padding: 2%;
     margin-top: 6.5%;
     border: 2px solid #DAE0E6;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.12); 
 }
 .textC{
     color: #aeafaf;
     margin-left: 2%;
+}
+.heading3{
+    padding: 1%;
+    font-weight: 600;
+}
+.label3{
+    margin-right: 25%;
+}
+.tab{
+    margin-left: 28%;
 }
