--- a/src/styles/Reviews.module.css
+++ b/src/styles/Reviews.module.css
@@ -2,3 +2,19 @@
     width: 100%;
     margin: 2% 5%;
 }
+
+/* slider box */
+.carousel{
+    display: flex;
+    background: linear-gradient(180deg, #6385FF -3.21%, #F2A8A8 71.13%);
+    padding: 5%;
+    border-radius: 8px;
+    width: 70%;
+    height: 50vh;
+    margin: 2%;
+}
+
+/* Slider Ima5ge */
+.sliderImg{
+
+}
