--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,8 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
-:root {
+/* :root {
   --foreground-rgb: 214, 219, 220;
   --background-start-rgb: #ffff;
 }
@@ -13,8 +13,6 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
-body {
-  
-}
+
