--- a/src/styles/Drivers.module.css
+++ b/src/styles/Drivers.module.css
@@ -26,15 +26,12 @@
 }
 /*  */
 .hori{
-    margin-left: 4%;
-    margin-right: 4%;
     background-color: gray;
-    height: 0.5vh;
+    height: 0.2vh;
 }
 /*  */
 .searchBar{
-    width: 80%;
-    display: flex;
+    
     background-color:  #6385FF;
     padding: 0.5%;
     margin: 2%;
@@ -47,11 +44,8 @@
     padding: 1%;
 }
 .Item1{
-    margin-right: 2%;
-    margin-left: 2%;
-}
-.input{
-    width: 300px;
+    background-color: #fff;
+    border-radius: 4px;
     padding: 1%;
 }
 .checkBox{
@@ -59,10 +53,14 @@
     margin-right: 3%;
 }
 .Item2{
-    margin-right: 2%;
+    width: 30%;
+    border-radius: 4px;
+    background-color: #fff;
 }
 .Item3{
     width: 30%;
+    padding: 1%;
+    border-radius: 4px;
     background-color: #fff;
 }
 /*  */
@@ -74,13 +72,6 @@
     margin: 1%;
     margin-left: 10%;
     margin-right: 10%;
-}
-.driverImg{
-    width: 10%;
-    height: 15vh;
-    border-radius: 50%;
-    margin-right: 4%;
-    margin-left: 1%;
 }
 .driverName{
     margin-top: 2%;
@@ -109,8 +100,10 @@
 }
 .check{
     background-color: #6385FF;
-    width: 25px;
-    height: 25px;
+    width: 10%;
+    height: 10%;
+    margin: 2%;
+    font-size: 15px;
     text-align: center;
     border-radius: 50%;
     margin-right: 10%;
