--- a/src/styles/NewsArchive.module.css
+++ b/src/styles/NewsArchive.module.css
@@ -1,39 +1,4 @@
-.mainContainer{
-    margin-left: 10%;
-    margin-right: 10%;
-}
-.container1{
-    display: flex;
-    padding: 1%;
-    margin: 1%;
-}
-.title1{
-    font-size: 30px;
-    font-weight: 700;
-    padding-bottom: 0.5%;
-}
-.img1{
-    width: 100%;
-    height: 40vh;
-    border-radius: 8px;
-}
-.textBox1{
-    margin-top: 10%;
-    margin-left: 10%;
-    text-align: center;
-}
-.label1{
-    font-size: 25px;
-    font-weight: 700;
-}
-.labelBtn2{
-    font-weight: 700;
-    margin-left: 3%;
-    margin-top: 2%;
-}
-.label3{
-    font-weight: 700;
-}
+/*  */
 /*  */
 .container2{
     display: flex;
